# MindForge

./: CLAUDE.md  LICENSE  README.md  pre-commit-config.yml  pyproject.toml
.github/workflows/: binaries.yml  ci.yml  eval.yml  install-smoke.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  product-strategy.md
docs/features/: auto-ingest.md  cli-polish.md  distribution.md  evaluation-harness.md  export-formats.md  http-api-and-web-ui.md  hybrid-retrieval.md  knowledge-hygiene.md  mcp-extensions.md  obsidian-plugin.md  provenance.md
docs/integrations/: README.md  claude-code.md  claude-desktop.md  codex-cli.md  generic-mcp.md  hermes-agent.md  openai-agents-sdk.md  openclaw.md
docs/superpowers/plans/: 2026-04-22-phase2.md  2026-05-05-phase3-v0.3.0.md  2026-05-07-incremental-ingestion-wireup.md  2026-05-08-heuristic-removal-and-mock-llm.md  2026-05-11-per-concept-provenance.md
docs/superpowers/specs/: 2026-04-21-phase0-and-phase1-design.md  2026-04-22-phase2-design.md  2026-05-05-phase3-v0.3.0-design.md  2026-05-07-incremental-ingestion-wireup-design.md  2026-05-08-heuristic-removal-and-mock-llm-design.md  2026-05-11-per-concept-provenance-design.md
eval/: README.md
mindforge/: __init__.py  cli.py  config.py  config_file.py  paths.py  pipeline.py  prune.py
mindforge/distillation/: concept.py  deduplicator.py  distiller.py  raw.py  renderer.py  source_ref.py
mindforge/embeddings/: index.py  ollama_provider.py  openai_compat_provider.py
mindforge/eval/: corpus.py  retrieval_tuner.py  runner.py  scorer.py
mindforge/graph/: builder.py
mindforge/hygiene/: __init__.py  conflict_detector.py  decay.py  markers.py  review_queue.py  tui.py
mindforge/ingestion/: chunker.py  extractor.py  file_hash_store.py  incremental.py  parser.py  sources.py
mindforge/linking/: linker.py
mindforge/llm/: client.py  distiller.py  extractor.py  mock.py
mindforge/mcp/: __main__.py  adapter.py  safety.py  server.py
mindforge/mcp/tools/: __init__.py  compare_concepts.py  explain_concept.py  path_between.py  subgraph.py  summarize_query.py
mindforge/query/: context_pack.py  engine.py  graph_walker.py  keyword_scorer.py
mindforge/storage/: __init__.py  fs.py
mindforge/utils/: text.py
packaging/: Dockerfile  mindforge.spec
packaging/homebrew/: mindforge.rb
skills/: SKILL.md
tests/: test_cli_diff.py  test_cli_dryrun.py  test_cli_filters.py  test_cli_query.py  test_cli_show.py  test_concept_schema.py  test_config_file.py  test_distillation.py  test_eval_corpus.py  test_eval_runner.py  test_eval_scorer.py  test_file_hash_store.py  test_graph.py  test_graph_walker.py  test_hybrid_retrieval.py  test_hygiene.py  test_incremental_ingestion.py  test_incremental_pipeline.py  test_ingestion.py  test_kb_provider_guard.py  test_keyword_scorer.py  test_linking.py  test_llm.py  test_manifest_history.py  test_manifest_snapshot.py  test_mcp.py  test_mcp_adapter.py  test_mcp_compare_concepts.py  test_mcp_explain_concept.py  test_mcp_get_subgraph.py  test_mcp_path_between.py  test_mcp_safety.py  test_mcp_summarize_query.py  test_mcp_synthesis_degraded.py  test_mock_llm_client.py  test_ollama_embedding_provider.py  test_openai_compat_embedding_provider.py  test_pipeline.py  test_provenance_integration.py  test_prune.py  (+6 more)
