[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindforge-kb"
version = "0.2.0"
description = "A local semantic memory engine that transforms AI conversation transcripts into a structured, queryable knowledge base."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BUSL-1.1" }
authors = [
    { name = "Accelerated Industries" },
]
keywords = [
    "knowledge-base",
    "semantic-memory",
    "llm",
    "mcp",
    "knowledge-graph",
    "rag",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "networkx>=3.4.2",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/AcceleratedIndustries/MindForge"
Repository = "https://github.com/AcceleratedIndustries/MindForge"
Issues = "https://github.com/AcceleratedIndustries/MindForge/issues"
Documentation = "https://github.com/AcceleratedIndustries/MindForge/blob/main/README.md"

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=5.4.1",
    "faiss-cpu>=1.13.2",
    "numpy>=1.24.0",
]
mcp = [
    "mcp>=1.27.0",
]
eval = [
    "pyyaml>=6.0",
]
all = [
    "mindforge-kb[embeddings,mcp,eval]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "hypothesis>=6",
    "bandit[toml]>=1.7",
    "types-PyYAML",
    "types-networkx",
]

[project.scripts]
mindforge = "mindforge.cli:main"

[tool.setuptools.packages.find]
include = ["mindforge*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests often carry long fixture strings on a single line; splitting them
# hurts readability. Unused locals in tests are usually intentional.
"tests/**/*.py" = ["E501", "F841"]
# The LLM extraction prompt is a template whose line structure is meaningful
# to the model; breaking it would change the prompt.
"mindforge/llm/extractor.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["mindforge"]

# Optional third-party libs without stubs. Embeddings is an opt-in extra;
# full typing for faiss/sentence-transformers/numpy is out of scope here.
[[tool.mypy.overrides]]
module = ["faiss", "faiss.*", "sentence_transformers", "sentence_transformers.*", "numpy", "numpy.*"]
ignore_missing_imports = true

# Legacy modules written before strict typing. Relax the strictest checks
# until a dedicated retrofit pass; still catches most type mismatches.
[[tool.mypy.overrides]]
module = [
    "mindforge.mcp.server",
    "mindforge.mcp.__main__",
    "mindforge.embeddings.index",
    "mindforge.llm.client",
    "mindforge.llm.extractor",
    "mindforge.graph.builder",
    "mindforge.ingestion.incremental",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_any_generics = false
no_implicit_optional = false
warn_return_any = false

[tool.bandit]
exclude_dirs = ["tests"]
